Fixed component consistency, added section headers to component index, added regions to main.css

--- a/components/index.html
+++ b/components/index.html
@@ -7,7 +7,7 @@
 <link href="../css/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://use.typekit.net/axs1svs.css">
 </head>
-<body>
+<body class="comp-site">
     <div class="component-container">
         <aside class="components__sidebar">
             <a href="index.html" class="logo">
@@ -74,9 +74,7 @@
         </aside>
         <section class="components__section">
             <h2 class="comopnent__headline">Compose It Web Components</h2>
-        
-            <h3 class="comopnent__subhead">Typography defaults</h3>
-        
+            <h3 class="comopnent__subhead">Atoms</h3>
             <!-- #region Atoms -->
             <!-- Body -->
         
@@ -400,6 +398,7 @@
                 </div>
                 </article>
             <!-- #endregion -->
+            <h3 class="comopnent__subhead">Headers</h3>
             <!-- #region Headers -->
         
             <!-- h2 -->
@@ -417,8 +416,8 @@
                         alt="h2 red">
                 </div>
                 <div class="component__code">
-                    <h2 class="h-two">Compose it</h2>
-                    <h2 class="h-two h-two--red">Mr Store</h2>
+                    <h2 class="h-two h-two--agency">Compose it</h2>
+                    <h2 class="h-two h-two--red h-two--agency">Mr Store</h2>
                 </div>
             </article>
             <!-- h3 -->
@@ -474,6 +473,7 @@
                 </div>
             </article>
             <!-- #endregion -->
+            <h3 class="comopnent__subhead">Logos</h3>
             <!-- #region Logos -->
             <!-- Logo -->
         
@@ -490,6 +490,8 @@
                     alt="Logo">
                 </div>
                 <div class="component__code">
+                    <a href="index.html" class="logo">
+                        <h1 style="display: none">Compose It</h1>
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo">
                         <g>
@@ -517,6 +519,9 @@
                         <path d="M133.3,17.1c-0.6,1-1.8,1.9-3.5,1.9c-2,0-3.9-0.7-3.9-3.9V6.8h-2V5.3c2.5,0,4.1-1.8,4.7-4.1c0.8,0,1.2,0,1.2,0v4.1h3.6v1.4
                             h-2.6V15c0,0.9,0.5,1.4,1,1.7c0.7,0.2,1.4,0.1,2-0.4L133.3,17.1z"/>
                     </svg>
+                    </a>
+                    <a href="index.html" class="logo">
+                        <h1 style="display: none">Compose It</h1>
                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                         viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo logo--cream">
                     <g>
@@ -544,6 +549,7 @@
                     <path d="M133.3,17.1c-0.6,1-1.8,1.9-3.5,1.9c-2,0-3.9-0.7-3.9-3.9V6.8h-2V5.3c2.5,0,4.1-1.8,4.7-4.1c0.8,0,1.2,0,1.2,0v4.1h3.6v1.4
                         h-2.6V15c0,0.9,0.5,1.4,1,1.7c0.7,0.2,1.4,0.1,2-0.4L133.3,17.1z"/>
                     </svg>
+                    </a>
                 </div>
             </article>
             <!-- Logomark -->
@@ -582,6 +588,7 @@
                 </div>
             </article>
             <!-- #endregion -->
+            <h3 class="comopnent__subhead">Molecules</h3>
             <!-- #region Molecules -->
             <!-- Menu -->
         
@@ -601,7 +608,7 @@
                     <div class="menu">
                         <strong>Menu</strong> <div class="menu-circle"></div>
                     </div>
-                    <div class="menu--black">
+                    <div class="menu menu--black">
                         <strong>Menu</strong> <div class="menu-circle--cream"></div>
                     </div>
                 </div>
@@ -622,41 +629,45 @@
                 </div>
                 <div class="component__code">
                     <div class="menu-bar">
-                        <h1 style="display: none">Compose It</h1>
+                        <a href="index.html" class="logo">
+                            <h1 style="display: none">Compose It</h1>
                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo">
-                        <g>
-                        <path d="M12.5,1.2c3.6-0.1,6.2,2.1,7.1,6.1h0.9V2.2C18.5,0.9,15.3,0,12.3,0C5.3,0,0,4.8,0,11.9c0,7.1,5.3,11.9,12.3,11.9
-                                c3,0,6.2-0.9,8.2-2.2v-5.2h-0.9c-1,4.1-3.6,6.2-7.1,6.1c-4.9-0.1-7.3-4.8-7.3-10.7C5.2,5.9,7.6,1.3,12.5,1.2z"/>
-                        <path d="M12.8,17.8c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C15.9,15.4,14.8,17.8,12.8,17.8z"/>
-                        </g>
-                        <path d="M48.4,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8v-6c0-2.1-0.7-3.5-2.4-3.5C39,6.5,38.1,8,38.1,10c0,0.1,0,6,0,6
-                            c0,1.1,0.3,1.7,1.3,1.8v0.9h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.8v-6c0-2.1-0.6-3.5-2.4-3.5c-1.6,0-2.5,1.5-2.5,3.4v6
-                            c0,1.1,0.3,1.7,1.4,1.8v0.9h-6.7v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.4-1h0.7V7c1-1.3,2.3-1.9,4-1.9
-                            c2.3,0,3.8,1,4.6,2.5c1-1.7,2.5-2.5,4.4-2.5c3.6,0,5.1,2.3,5.1,5.4V16C47,17.1,47.3,17.7,48.4,17.8z"/>
-                        <path d="M64.7,12c0,4.3-2.3,6.9-6,6.9c-1.8,0-3.1-0.7-4.1-1.7v5.2c0,1.1,0.3,1.7,1.3,1.7V25h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.7V8.8
-                            c0-1.1-0.3-1.7-1.3-1.7V6.1l4.6-1h0.7v1.7c0.9-1,2.3-1.7,4.1-1.7C62.3,5.1,64.7,7.7,64.7,12z M60.7,12c0-3.3-0.9-5.8-3-5.8
-                            c-2.1,0-3.2,2.3-3.2,5.8c0,3.5,1.1,5.8,3.2,5.8C59.9,17.8,60.7,15.3,60.7,12z"/>
-                        <path d="M73.2,5.1C69.3,5.1,66,7.5,66,12c0,4.5,3.4,6.9,7.3,6.9c3.9,0,7.3-2.4,7.3-6.9C80.5,7.5,77.1,5.1,73.2,5.1z M73.2,17.8
-                            c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C76.4,15.4,75.2,17.8,73.2,17.8z"/>
-                        <path d="M88.7,10.4c2.1,1,4.7,2.1,3.8,5.2c-0.6,2.1-2.7,3.3-5.5,3.3c-1.7,0-3.9-0.5-5.2-1.5v-3.4h0.7c0.6,2.6,2.7,3.9,4.6,3.9
-                            c1.1,0,2.1-0.5,2.3-1.4c0.3-1.5-1.1-2-3-2.8c-2.7-1.2-4.9-2.6-4.1-5.9c0.6-2.2,3-2.8,5-2.8c1.4,0,3,0.5,4.2,1.4v3h-0.6
-                            C90.1,7,89.1,6,87.2,6c-0.7,0-1.8,0.2-2,1.4C85.2,9,86.8,9.6,88.7,10.4z"/>
-                        <path d="M106.9,11.8c-9,0-9,0-9,0c0.4,5.5,6.1,5.9,8.4,3.3l0.5,0.4c-1,1.9-3,3.4-5.7,3.4c-3.8,0-7.2-2.4-7.2-7.1
-                            c0-4.2,2.9-6.7,7-6.7c4,0,6.2,2.8,6.1,6.3V11.8z M97.8,10.4h5.5c0-2-0.4-4.4-2.5-4.4C99.1,6.1,98,7.7,97.8,10.4z"/>
-                        <path d="M109.4,16.6c0-1.5,1.1-2.4,2.5-2.4c1.4,0,2.5,0.9,2.5,2.4c0,1.5-1.1,2.4-2.5,2.4C110.5,18.9,109.4,18.1,109.4,16.6z"/>
-                        <path d="M123.6,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.6-1h0.7V16
-                            C122.2,17.1,122.4,17.7,123.6,17.8z"/>
-                        <path d="M133.3,17.1c-0.6,1-1.8,1.9-3.5,1.9c-2,0-3.9-0.7-3.9-3.9V6.8h-2V5.3c2.5,0,4.1-1.8,4.7-4.1c0.8,0,1.2,0,1.2,0v4.1h3.6v1.4
-                            h-2.6V15c0,0.9,0.5,1.4,1,1.7c0.7,0.2,1.4,0.1,2-0.4L133.3,17.1z"/>
+                            viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo">
+                            <g>
+                            <path d="M12.5,1.2c3.6-0.1,6.2,2.1,7.1,6.1h0.9V2.2C18.5,0.9,15.3,0,12.3,0C5.3,0,0,4.8,0,11.9c0,7.1,5.3,11.9,12.3,11.9
+                                    c3,0,6.2-0.9,8.2-2.2v-5.2h-0.9c-1,4.1-3.6,6.2-7.1,6.1c-4.9-0.1-7.3-4.8-7.3-10.7C5.2,5.9,7.6,1.3,12.5,1.2z"/>
+                            <path d="M12.8,17.8c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C15.9,15.4,14.8,17.8,12.8,17.8z"/>
+                            </g>
+                            <path d="M48.4,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8v-6c0-2.1-0.7-3.5-2.4-3.5C39,6.5,38.1,8,38.1,10c0,0.1,0,6,0,6
+                                c0,1.1,0.3,1.7,1.3,1.8v0.9h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.8v-6c0-2.1-0.6-3.5-2.4-3.5c-1.6,0-2.5,1.5-2.5,3.4v6
+                                c0,1.1,0.3,1.7,1.4,1.8v0.9h-6.7v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.4-1h0.7V7c1-1.3,2.3-1.9,4-1.9
+                                c2.3,0,3.8,1,4.6,2.5c1-1.7,2.5-2.5,4.4-2.5c3.6,0,5.1,2.3,5.1,5.4V16C47,17.1,47.3,17.7,48.4,17.8z"/>
+                            <path d="M64.7,12c0,4.3-2.3,6.9-6,6.9c-1.8,0-3.1-0.7-4.1-1.7v5.2c0,1.1,0.3,1.7,1.3,1.7V25h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.7V8.8
+                                c0-1.1-0.3-1.7-1.3-1.7V6.1l4.6-1h0.7v1.7c0.9-1,2.3-1.7,4.1-1.7C62.3,5.1,64.7,7.7,64.7,12z M60.7,12c0-3.3-0.9-5.8-3-5.8
+                                c-2.1,0-3.2,2.3-3.2,5.8c0,3.5,1.1,5.8,3.2,5.8C59.9,17.8,60.7,15.3,60.7,12z"/>
+                            <path d="M73.2,5.1C69.3,5.1,66,7.5,66,12c0,4.5,3.4,6.9,7.3,6.9c3.9,0,7.3-2.4,7.3-6.9C80.5,7.5,77.1,5.1,73.2,5.1z M73.2,17.8
+                                c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C76.4,15.4,75.2,17.8,73.2,17.8z"/>
+                            <path d="M88.7,10.4c2.1,1,4.7,2.1,3.8,5.2c-0.6,2.1-2.7,3.3-5.5,3.3c-1.7,0-3.9-0.5-5.2-1.5v-3.4h0.7c0.6,2.6,2.7,3.9,4.6,3.9
+                                c1.1,0,2.1-0.5,2.3-1.4c0.3-1.5-1.1-2-3-2.8c-2.7-1.2-4.9-2.6-4.1-5.9c0.6-2.2,3-2.8,5-2.8c1.4,0,3,0.5,4.2,1.4v3h-0.6
+                                C90.1,7,89.1,6,87.2,6c-0.7,0-1.8,0.2-2,1.4C85.2,9,86.8,9.6,88.7,10.4z"/>
+                            <path d="M106.9,11.8c-9,0-9,0-9,0c0.4,5.5,6.1,5.9,8.4,3.3l0.5,0.4c-1,1.9-3,3.4-5.7,3.4c-3.8,0-7.2-2.4-7.2-7.1
+                                c0-4.2,2.9-6.7,7-6.7c4,0,6.2,2.8,6.1,6.3V11.8z M97.8,10.4h5.5c0-2-0.4-4.4-2.5-4.4C99.1,6.1,98,7.7,97.8,10.4z"/>
+                            <path d="M109.4,16.6c0-1.5,1.1-2.4,2.5-2.4c1.4,0,2.5,0.9,2.5,2.4c0,1.5-1.1,2.4-2.5,2.4C110.5,18.9,109.4,18.1,109.4,16.6z"/>
+                            <path d="M123.6,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.6-1h0.7V16
+                                C122.2,17.1,122.4,17.7,123.6,17.8z"/>
+                            <path d="M133.3,17.1c-0.6,1-1.8,1.9-3.5,1.9c-2,0-3.9-0.7-3.9-3.9V6.8h-2V5.3c2.5,0,4.1-1.8,4.7-4.1c0.8,0,1.2,0,1.2,0v4.1h3.6v1.4
+                                h-2.6V15c0,0.9,0.5,1.4,1,1.7c0.7,0.2,1.4,0.1,2-0.4L133.3,17.1z"/>
                         </svg>
+                        </a>
                         <div class="menu">
                             <strong>Menu</strong> <div class="menu-circle"></div>
                         </div>
                     </div>
                     <div class="menu-bar--black">
-                        <svg version="1.1" id="logo--cream" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                        viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo logo--cream">
+                        <a href="index.html" class="logo">
+                            <h1 style="display: none">Compose It</h1>
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                            viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo logo--cream">
                         <g>
                         <path d="M12.5,1.2c3.6-0.1,6.2,2.1,7.1,6.1h0.9V2.2C18.5,0.9,15.3,0,12.3,0C5.3,0,0,4.8,0,11.9c0,7.1,5.3,11.9,12.3,11.9
                                 c3,0,6.2-0.9,8.2-2.2v-5.2h-0.9c-1,4.1-3.6,6.2-7.1,6.1c-4.9-0.1-7.3-4.8-7.3-10.7C5.2,5.9,7.6,1.3,12.5,1.2z"/>
@@ -682,7 +693,8 @@
                         <path d="M133.3,17.1c-0.6,1-1.8,1.9-3.5,1.9c-2,0-3.9-0.7-3.9-3.9V6.8h-2V5.3c2.5,0,4.1-1.8,4.7-4.1c0.8,0,1.2,0,1.2,0v4.1h3.6v1.4
                             h-2.6V15c0,0.9,0.5,1.4,1,1.7c0.7,0.2,1.4,0.1,2-0.4L133.3,17.1z"/>
                         </svg>
-                        <div class="menu--black">
+                        </a>
+                        <div class="menu menu--black">
                             <strong>Menu</strong> <div class="menu-circle--cream"></div>
                         </div>
                     </div>
@@ -728,7 +740,7 @@
                     <figure class="compimg compimg--prod">
                         <img class="img" src="../img/CANAM4-1024x576.jpg" alt="Image">
                         <div class="compimg--hover">
-                            <a href="!#"><h3 class="h-three h-three--red">Can-Am</h3></a>
+                            <a href="!#"><h3 class="h-three h-three--prod">Can-Am</h3></a>
                         </div>
                         <figcaption class="img-caption--project">Digital</figcaption>
                     </figure>
@@ -796,7 +808,11 @@
                 </div>
             </article>
             <!-- #endregion -->
+            <h3 class="comopnent__subhead">Organisms</h3>
             <!-- #region Organisms -->
+            
+            <!-- NOTE ON TYPE: The calc fucntion I'm using to make the type responsive in the main index looks strange on this page because these components are not the full width they'll be at on the main index. So, the compoents using h-two won't look great here, but I think it makes sense for them to be the same code as they are on the main index -->
+            
             <!-- Work Section -->
         
             <article class="component">
@@ -946,7 +962,7 @@
                                 <figure class="compimg compimg--prod">
                                     <img class="img" src="../img/CANAM4-1024x576.jpg" alt="Image">
                                     <div class="compimg--hover">
-                                        <a href="!#"><h3 class="h-three h-three--red">Can-Am</h3></a>
+                                        <a href="!#"><h3 class="h-three h-three--prod">Can-Am</h3></a>
                                     </div>
                                     <figcaption class="img-caption--project">Digital</figcaption>
                                 </figure>
@@ -956,7 +972,7 @@
                                 <figure class="compimg compimg--prod">
                                     <img class="img" src="../img/project-img-mr-store.png" alt="Image">
                                     <div class="compimg--hover">
-                                        <a href="!#"><h3 class="h-three h-three--red">Mr Store</h3></a>
+                                        <a href="!#"><h3 class="h-three h-three--prod">Mr Store</h3></a>
                                     </div>
                                     <figcaption class="img-caption--project">TV Prod</figcaption>
                                 </figure>
@@ -967,7 +983,7 @@
                                 <figure class="compimg compimg--prod">
                                     <img class="img" src="../img/vlcsnap-2021-08-10-11h07m36s628-1024x576.png" alt="Image">
                                     <div class="compimg--hover">
-                                        <a href="!#"><h3 class="h-three h-three--red">Vallée de la gastronomie</h3></a>
+                                        <a href="!#"><h3 class="h-three h-three--prod">Vallée de la gastronomie</h3></a>
                                     </div>
                                     <figcaption class="img-caption--project">Digital</figcaption>
                                 </figure>
@@ -978,7 +994,7 @@
                                 <figure class="compimg compimg--prod">
                                     <img class="img" src="../img/Montage-teaser-eolien20-1024x537.jpg" alt="Image">
                                     <div class="compimg--hover">
-                                        <a href="!#"><h3 class="h-three h-three--red">Boralex</h3></a>
+                                        <a href="!#"><h3 class="h-three h-three--prod">Boralex</h3></a>
                                     </div>
                                     <figcaption class="img-caption--project">Corporate</figcaption>
                                 </figure>
@@ -989,7 +1005,7 @@
                                 <figure class="compimg compimg--prod">
                                     <img class="img" src="../img/C021_ULTIMATE_V020-1024x560.jpg" alt="Image">
                                     <div class="compimg--hover">
-                                        <a href="!#"><h3 class="h-three h-three--red">Ultimate</h3></a>
+                                        <a href="!#"><h3 class="h-three h-three--prod">Ultimate</h3></a>
                                     </div>
                                     <figcaption class="img-caption--project">Digtal</figcaption>
                                 </figure>
@@ -1024,7 +1040,7 @@
                 </div>
                 <div class="component__code">
                     <article class="section section--agency">
-                        <h2 class="h-two">Compose it</h2>
+                        <h2 class="h-two h-two--agency">Compose it</h2>
                         <div class="content content--agency">
                             <h4 class="h-four">Une agence intégrée</h4>
                             <div class="content__paragraph">
@@ -1169,7 +1185,7 @@
                 </div>
                 <div class="component__code">
                     <article class="section section--awards">
-                        <h2 class="h-two">Récompenses</h2>
+                        <h2 class="h-two h-two--awards">Récompenses</h2>
                         <div class="content content--awards">
                             <div class="table">
                                 <div class="table__row">
@@ -1291,10 +1307,10 @@
                             </div>
                             <div class="content content--contact content--contact--block">
                                 <a href="tel:0629664445">
-                                    <h2 class="h-two h-two--red" style="font-size: 7.5rem;">06.29.66.44.45</h2>
+                                    <h2 class="h-two h-two--red h-two--phone">06.29.66.44.45</h2>
                                 </a>
                                 <a href="mailto:contact@composeitprod.com">
-                                    <h2 class="h-two h-two--red" style="font-size: 3.5rem;">contact@composeitprod.com</h2>
+                                    <h2 class="h-two h-two--red h-two--email ">contact@composeitprod.com</h2>
                                 </a>
                             </div>
                             <div class="content content--footer">
