Added comments to components page

--- a/components/index.html
+++ b/components/index.html
@@ -7,6 +7,13 @@
 <link href="../css/main.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://use.typekit.net/axs1svs.css">
 </head>
+
+    <!-- NOTES -->
+        
+        <!-- NOTE ON h1 validation error: h1 validation errors are due to h1 elements in the logo and header bar section not being used as top level elements on this components page, but they will be top level on the main index, so I thought it made sense to leave as is despite the validation warning -->
+
+        <!-- NOTE ON TYPE: The calc fucntion I'm using to make the type responsive in the main index looks strange on this page because these components are not the full width they'll be at on the main index. So, the compoents using h-two won't look great here, but I think it makes sense for them to be the same code as they are on the main index -->
+
 <body class="comp-site">
     <div class="component-container">
         <aside class="components__sidebar">
@@ -810,8 +817,6 @@
             <!-- #endregion -->
             <h3 class="comopnent__subhead">Organisms</h3>
             <!-- #region Organisms -->
-            
-            <!-- NOTE ON TYPE: The calc fucntion I'm using to make the type responsive in the main index looks strange on this page because these components are not the full width they'll be at on the main index. So, the compoents using h-two won't look great here, but I think it makes sense for them to be the same code as they are on the main index -->
             
             <!-- Work Section -->
         
