--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ html {
   --font-size-h5: 1.333rem;
   --font-size-table: 1.6rem;
   --font-size-p: 1rem;
-  /*Ultimately, I think it's bad design to have h3 and h4 so close in size, but the site uses two different sizes for these items consistenly, so I followed that lead to be faithful to their design*/
+  /*Ultimately, I think it's bad design to have h3 and h4 so close in size, but the original site uses two different sizes for these items consistenly, so I followed that lead to be faithful to their design*/
 }
 
 body {
@@ -98,10 +98,6 @@ strong {
 
 .site-container--red {
   padding: 0rem 6rem;
-  background-color: var(--color-red);
-}
-
-.site-container--red {
   background-color: var(--color-red);
 }
 /*#endregion*/
@@ -361,47 +357,32 @@ figcaption {
 
 /* #region Buttons */
 
-.button-container {
+.button__container {
   position: absolute;
 }
 
-.button-container--inline-lg {
+.button__container--inline-lg {
   width: 200px;
   height: 200px;
   display: block;
   position: relative;
 }
 
-.button-container--inline-md {
+.button__container--inline-md {
   width: 120px;
   height: 120px;
   display: block;
   position: relative;
 }
 
-.button-container--inline-sm {
+.button__container--inline-sm {
   width: 100px;
   height: 100px;
   display: block;
   position: relative;
 }
 
-.buttons--s {
-  width: 100px;
-  height: 100px;
-}
-
-.buttons--m {
-  width: 120px;
-  height: 120px;
-}
-
-.buttons--l {
-  width: 200px;
-  height: 200px;
-}
-
-.button-text {
+.button__text {
   position: absolute;
   left: 0%;
   z-index: 2;
@@ -409,19 +390,19 @@ figcaption {
   animation: rotation 10s infinite linear;
 }
 
-.button-text--lg {
+.button__text--lg {
   width: 200px;
   height: 200px;
   top: 6%;
 }
 
-.button-text--md {
+.button__text--md {
   width: 120px;
   height: 120px;
   top: 11%;
 }
 
-.button-text--sm {
+.button__text--sm {
   width: 100px;
   height: 100px;
   top: 13%;
@@ -436,40 +417,40 @@ figcaption {
   }
 } /*ref: https://flaviocopes.com/rotate-image/*/
 
-.button-shapes {
+.button__shapes {
   z-index: 1;
   padding: 0;
   margin: 0;
 }
 
-.button-container--inline-lg:hover,
-.button-container--inline-md:hover,
-.button-container--inline-sm:hover {
+.button__container--inline-lg:hover,
+.button__container--inline-md:hover,
+.button__container--inline-sm:hover {
   transform: scale(1.1);
   cursor: pointer;
 }
 
-.button--arrow-rotate:hover {
+.button__arrow-rotate:hover {
   transform: rotate(-180deg);
 }
 
-.button-cream {
+.button__cream {
   fill: var(--color-cream);
   stroke: var(--color-red);
   stroke-width: 2px;
 }
 
-.button-cream--blk {
+.button__cream--blk {
   fill: var(--color-cream);
   stroke: var(--color-black);
   stroke-width: 2px;
 }
 
-.button-blk {
+.button__blk {
   fill: var(--color-black);
 }
 
-.button-red {
+.button__red {
   fill: var(--color-red);
 }
 /*#endregion*/
@@ -756,7 +737,7 @@ div.project-category {
   display: inline;
 }
 
-a.project--link {
+a.project__link {
   text-decoration: none;
   color: var(--color-black);
   text-underline-offset: 0;
@@ -770,7 +751,7 @@ a.project--link {
   display: none;
 }
 
-a.project--link:hover > .project-category--hover {
+a.project__link:hover > .project-category--hover {
   display: flex;
 }
 
@@ -778,14 +759,14 @@ a.project--link:hover > .project-category--hover {
   display: inline;
 }
 
-a.project--link:hover > .project-category--normal {
+a.project__link:hover > .project-category--normal {
   display: none;
 }
 /*#endregion*/
 
 /* #region Box Link */
 
-.box-link--hider {
+.box-link__hider {
   height: 14rem;
   overflow: hidden;
   background-color: var(--color-cream);
@@ -890,10 +871,7 @@ a.project--link:hover > .project-category--normal {
   background-color: var(--color-cream);
   border-bottom: 1px solid var(--color-black);
   display: grid;
-  grid-template-columns: minmax(0, 1fr) 0.25fr minmax(0, 1fr) 0.25fr minmax(
-      0,
-      1fr
-    );
+  grid-template-columns: minmax(0, 1fr) 0.25fr minmax(0, 1fr) 0.25fr minmax(0, 1fr);
   grid-auto-flow: column;
   align-content: space-between;
   align-items: center;
@@ -902,31 +880,31 @@ a.project--link:hover > .project-category--normal {
   margin-bottom: 0rem;
 }
 
-.work-grid-1,
-.work-grid-2,
-.work-grid-3 {
+.work__grid-1,
+.work__grid-2,
+.work__grid-3 {
   justify-self: start;
   grid-row: span 1;
   grid-column: span 1;
 }
 
-.work-grid-4 {
+.work__grid-4 {
   grid-row: span 3;
   grid-column: 3 / 3;
   justify-self: center;
   align-self: center;
 }
 
-.work-grid-5,
-.work-grid-6,
-.work-grid-7 {
+.work__grid-5,
+.work__grid-6,
+.work__grid-7 {
   justify-self: end;
   grid-row: span 1;
   grid-column: 5 / 5;
   text-align: right;
 }
 
-.work-grid-right {
+.work__grid-right {
   float: right;
 }
 
@@ -1128,7 +1106,7 @@ a.project--link:hover > .project-category--normal {
   /*ref: https://css-tricks.com/adding-stroke-to-web-text/*/
 }
 
-.content--contact .button-container--inline-lg {
+.content--contact .button__container--inline-lg {
   flex-basis: 20%;
 }
 
@@ -1170,7 +1148,7 @@ a.project--link:hover > .project-category--normal {
     width: 300px;
     height: 300px;
   }
-  .content--contact .button-container--inline-lg {
+  .content--contact .button__container--inline-lg {
     flex-basis: 12%;
   }
 }
@@ -1193,7 +1171,7 @@ a.project--link:hover > .project-category--normal {
     --font-size-table: 1rem;
     --font-size-p: 0.8rem;
   }
-  .content--contact .button-container--inline-lg {
+  .content--contact .button__container--inline-lg {
     width: 130px;
     height: 130px;
   }
