Cleaned up /img folder and updated components and main 'index.html'

--- a/components/index.html
+++ b/components/index.html
@@ -262,7 +262,7 @@
             <figure class="compimg compimg--project">
               <img
                 class="img"
-                src="../img/project-img-mr-store.png"
+                src="../img/Montage-teaser-eolien20-1024x537.jpg"
                 alt="Mr Store Project Image"
               />
               <figcaption class="img-caption--project">Digital</figcaption>
@@ -270,7 +270,7 @@
             <figure class="compimg compimg--insta">
               <img
                 class="img"
-                src="../img/insta-img-cameras.jpeg"
+                src="../../img/insta-7.jpg"
                 alt="Cameramen"
               />
             </figure>
@@ -284,7 +284,7 @@
             <figure class="compimg compimg--trust">
               <img
                 class="img"
-                src="../img/trust-img-service-plan.png"
+                src="../img/Logo-SERVICE-PLAN--480x48.png"
                 alt="Service Plan Logo"
               />
             </figure>
@@ -2429,7 +2429,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/254838928_1321584128281022_5178029343191846147_n.jpg"
+                      src="../img/insta-1.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2437,7 +2437,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/254379286_108885048179561_448578568573009036_n.jpg"
+                      src="../img/insta-2.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2445,7 +2445,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/254292369_131941605864640_5830075327915987860_n.jpg"
+                      src="../img/insta-3.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2453,7 +2453,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/253787394_1760563340802190_1757040334419137845_n.jpg"
+                      src="../img/insta-4.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2461,7 +2461,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/254068008_401673668341702_802960703123140033_n.jpg"
+                      src="../img/insta-5.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2469,7 +2469,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/254078147_214410634163782_2193567389439757245_n.jpg"
+                      src="../img/insta-6.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2477,7 +2477,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/241702325_574550980647449_5311797978791950906_n.jpg"
+                      src="../img/insta-7.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2485,7 +2485,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/241722466_554018682510933_5549561933152187304_n.jpg"
+                      src="../img/insta-8.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2493,7 +2493,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/241953127_134985438847846_6240426476278452073_n.jpg"
+                      src="../img/insta-9.jpg"
                       alt="Image"
                     /></figure
                 ></a>
