Fixed /img error in 'components/index.html'

--- a/components/index.html
+++ b/components/index.html
@@ -270,7 +270,7 @@
             <figure class="compimg compimg--insta">
               <img
                 class="img"
-                src="../../img/insta-7.jpg"
+                src="../img/insta-7.jpg"
                 alt="Cameramen"
               />
             </figure>
@@ -2429,7 +2429,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-1.jpg"
+                      src="/img/insta-1.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2437,7 +2437,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-2.jpg"
+                      src="/img/insta-2.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2445,7 +2445,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-3.jpg"
+                      src="/img/insta-3.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2453,7 +2453,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-4.jpg"
+                      src="/img/insta-4.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2461,7 +2461,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-5.jpg"
+                      src="/img/insta-5.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2469,7 +2469,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-6.jpg"
+                      src="/img/insta-6.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2477,7 +2477,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-7.jpg"
+                      src="/img/insta-7.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2485,7 +2485,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-8.jpg"
+                      src="/img/insta-8.jpg"
                       alt="Image"
                     /></figure
                 ></a>
@@ -2493,7 +2493,7 @@
                   ><figure class="compimg compimg--insta">
                     <img
                       class="img"
-                      src="../img/insta-9.jpg"
+                      src="/img/insta-9.jpg"
                       alt="Image"
                     /></figure
                 ></a>
